--- a/css/carousel.css
+++ b/css/carousel.css
@@ -44,7 +44,7 @@
 /* HERO-SECTION */
 
 .hero {
-  background-image: url("../img/MackbookPro.png");
+  background-image: url("https://dinaspppa.acehprov.go.id/media/2023.10/logo_dp3a_21.png");
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
